small touchups on front end and updating demo gif

--- a/server/public/css/site.css
+++ b/server/public/css/site.css
@@ -1,3 +1,13 @@
 .github-ribbon{
     z-index:100000; position: absolute; top: 0; right: 0; border: 0;
 }
+nav>div.container{
+    margin-left:20px;
+}
+
+.navbar-brand>img{
+    float:left;
+    margin-top:-14px;
+    padding-right:10px;
+    height:50px;
+}
